base-infra/argocd/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
    platform: infrastructure # Allow access from gateway-platform
